--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -1060,6 +1060,9 @@ Apple:
     - regex: '(?:Apple-|.+_)?iPad12[C,_][12]'
       model: 'iPad 9 10.2"'
       device: 'tablet'
+    - regex: '(?:Apple-|.+_)?iPad13[C,_](?:9|11)'
+      model: 'iPad Pro 5 12.9"'
+      device: 'tablet'
     - regex: '(?:Apple-|.+_)?iPad13[C,_][12]'
       model: 'iPad Air 4'
       device: 'tablet'
