--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -1039,7 +1039,7 @@ Apple:
     - regex: '(?:Apple-|.+_)?iPad8[C,_](?:9|10)'
       model: 'iPad Pro 2 11"'
       device: 'tablet'
-    - regex: '(?:Apple-|.+_)?iPad13[C,_][456]'
+    - regex: '(?:Apple-|.+_)?iPad13[C,_][4-7]'
       model: 'iPad Pro 3 11"'
       device: 'tablet'
     - regex: '(?:Apple-|.+_)?iPad8[C,_]1[12]'
