--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -876,6 +876,9 @@ Apple:
     - regex: '(?:.+_)?MacBookPro18(?:%2C|,)1'
       device: 'desktop'
       model: 'MacBook Pro 16" (2021)'
+    - regex: '(?:.+_)?MacBookPro18(?:%2C|,)3'
+      device: 'desktop'
+      model: 'MacBook Pro 14" (2021)'
     - regex: '(?:.+_)?Macmini8(?:%2C|,)1'
       device: 'desktop'
       model: 'Mac Mini (2018)'
