--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -873,7 +873,7 @@ Apple:
     - regex: '(?:.+_)?MacBookPro17(?:%2C|,)1'
       device: 'desktop'
       model: 'MacBook Pro 13" (2020)'
-    - regex: '(?:.+_)?MacBookPro18(?:%2C|,)1'
+    - regex: '(?:.+_)?MacBookPro18(?:%2C|,)[12]'
       device: 'desktop'
       model: 'MacBook Pro 16" (2021)'
     - regex: '(?:.+_)?MacBookPro18(?:%2C|,)3'
