--- a/Tests/fixtures/tablet-1.yml
+++ b/Tests/fixtures/tablet-1.yml
@@ -9274,7 +9274,7 @@
   device:
     type: tablet
     brand: Apple
-    model: iPad Air 4
+    model: iPad Air 4 WiFi
   os_family: iOS
   browser_family: Unknown
 - 
