--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -1096,7 +1096,10 @@ Apple:
     - regex: '(?:Apple-|.+_)?iPad13[C,_](?:9|10|11)'
       model: 'iPad Pro 5 12.9"'
       device: 'tablet'
-    - regex: '(?:Apple-|.+_)?iPad13[C,_][12]'
+    - regex: '(?:Apple-|.+_)?iPad13[C,_]1'
+      model: 'iPad Air 4 WiFi'
+      device: 'tablet'
+    - regex: '(?:Apple-|.+_)?iPad13[C,_]2'
       model: 'iPad Air 4'
       device: 'tablet'
     - regex: '(?:Apple-|.+_)?iPad14[C,_]1'
