--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15175,7 +15175,7 @@ Samsung:
       model: 'Galaxy A31'
     - regex: '(?:SAMSUNG-)?SM-A325'
       model: 'Galaxy A32'
-    - regex: '(?:SAMSUNG-)?(?:SM-A326(?:BR|B)|SCG08)'
+    - regex: '(?:SAMSUNG-)?(?:SM-A326(?:BR|[BU])|SCG08)'
       model: 'Galaxy A32 5G'
     - regex: '(?:SAMSUNG-)?SM-A405(?:F[NM]|S)'
       model: 'Galaxy A40'
