--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -2639,3 +2639,11 @@
     version: 11.2.2
     platform: x64
     family: Mac
+-
+  user_agent: rekordbox/5.8.6.0004 Windows 10(64bit)
+  os:
+    name: Windows
+    short_name: WIN
+    version: "10"
+    platform: x64
+    family: Windows
