--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14012,7 +14012,7 @@ Pentagram:
 
 # Tcl (tcl.com)
 TCL:
-  regex: 'TCL,|TCL[_ -][a-z0-9]+|(?:TCL[_ -][^;/]+ Build)|(?:TCLGalaG60(?:\(9108A\))?|4187M|5102B|5133A|5152D|5159[AJ]|5199I|6125[FD]|7040N|A50[279]DL|T78[02]H|T770H|T671[HF]|T790Y|T766H_(?:RU|EEA)|T766[AJU]|T799[BH]|T775H|Percee TV)(?:[);/ ]|$)'
+  regex: 'TCL,|TCL[_ -][a-z0-9]+|(?:TCL[_ -][^;/]+ Build)|(?:TCLGalaG60(?:\(9108A\))?|4187M|5102B|5133A|5152D|5159[AJ]|5199I|6125[FD]|7040N|9048S|A50[279]DL|T78[02]H|T770H|T671[HF]|T790Y|T766H_(?:RU|EEA)|T766[AJU]|T799[BH]|T775H|Percee TV)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'TCLGalaG60(?:\(9108A\))?(?:[);/ ]|$)'
@@ -14059,6 +14059,10 @@ TCL:
       model: '20 SE'
     - regex: 'T799[BH](?:[);/ ]|$)'
       model: '10 Pro'
+
+    - regex: '9048S(?:[);/ ]|$)'
+      device: 'tablet'
+      model: 'Tab 8" 4G'
 
     - regex: '(Percee TV)(?:[);/ ]|$)'
       device: 'tv'
